# src/swagger/swagger_output.json
@@ -63,33 +63,6 @@
         }
       }
     },
-    "/myreadify/library/preferences": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "preferences": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/myreadify/library/update/{id}": {
       "put": {
         "description": "",
